--- a/storage_app/.env
+++ b/storage_app/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Xea3BryI2y0NhhQROU8Y8PT4kPD6A7s5mgo514oz3wc=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
@@ -23,8 +23,8 @@ MONGODB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+FILESYSTEM_DISK=public
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -34,14 +34,17 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=mailgun
+MAIL_HOST=smtp.eu.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=YOUR
+MAIL_PASSWORD=YOUR
+MAIL_ENCRYPTION=starttls
+MAIL_FROM_ADDRESS="no-reply@hubsecure.com"
 MAIL_FROM_NAME="${APP_NAME}"
+MAILGUN_DOMAIN=YOUR
+MAILGUN_SECRET=YOUR
+MAILGUN_ENDPOINT=api.eu.mailgun.net
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -62,3 +65,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FRONTEND_URL="http://127.0.0.1"
+XRPL_BLOCK_DOMAIN="http://xrpl_api:8005"
+XRPL_APP_ENCRYPTION_KEY="Y37HXC2iiiq4HX0N08ufT271sQHPlI4p"
+SCOUT_DRIVER=database
