--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 VUE_APP_BASE_URL="/"
-VUE_APP_BACKEND_URL="https://api.hubsecure.thehubit.no/api/v1"
+VUE_APP_BACKEND_URL="http://localhost:8000/api/v1"
