--- a/dockerfiles/nginx/default.conf
+++ b/dockerfiles/nginx/default.conf
@@ -1,13 +1,10 @@
 server {
-    client_max_body_size 20M;
     listen 80;
+    client_max_body_size 220M;
     index index.php index.html;
-    server_name _;
-    root /var/www/html/public;
-
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+    root /var/www/public;
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -17,5 +14,10 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
     }
 }
