--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "ramda": "^0.27.1",
     "remixicon": "^2.5.0",
     "select2": "~4.0",
+    "serve": "^14.2.0",
     "smooth-scrollbar": "^8.5.2",
     "v-click-outside": "^3.2.0",
     "vue": "^2.6.11",
