--- a/storage_app/.env
+++ b/storage_app/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:Xea3BryI2y0NhhQROU8Y8PT4kPD6A7s5mgo514oz3wc=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -23,7 +23,7 @@ MONGODB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=public
+FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
