Squashed commit of the following:
commit 6e2bb19e1fe1f3f123bd9acbb469b9a8bfff27cd
Author: Ahmed Rizawan <ahm.rizawan@gmail.com>
Date:   Tue Apr 25 15:37:15 2023 +0600

    Added laravel cron

commit a87025671befc859d6bec7af5cc2b4e19a76c45c
Author: Ahmed Rizawan <ahm.rizawan@gmail.com>
Date:   Tue Apr 25 15:01:53 2023 +0600

    Squashed commit of the following:

    commit 6d6a5eeb697dfcc99c472fabca60523aa998f311
    Author: Ahmed Rizawan <ahm.rizawan@gmail.com>
    Date:   Tue Apr 25 14:59:26 2023 +0600

        WIP updates

    commit e0b6062193f2bebc36b996951775e552d1191631
    Author: maruthi_edien <maruthi@edien.com>
    Date:   Mon Apr 24 21:45:28 2023 +0530

        folder click issue fix

    commit e02b65abc8af7a6a54c4eaf0d5ad6d6d9e4d2a78
    Author: maruthi_edien <maruthi@edien.com>
    Date:   Mon Apr 24 20:33:02 2023 +0530

        dashboard folder click fix

    commit 8b21ecba9c7af8c4fdc401662cf0285042959197
    Author: maruthi_edien <maruthi@edien.com>
    Date:   Mon Apr 24 20:19:29 2023 +0530

        folder rename updates

    commit cdad0dc1333e606dc0cb31345251b1f4c2cf0358
    Author: gauravshah1993 <129276133+gauravshah1993@users.noreply.github.com>
    Date:   Fri Apr 21 16:10:21 2023 +0530

        Gaurav/hub 317 prevent storage public access (#8)

    commit 96a29943691a7eb5448e9330cd6fbdeb03494363
    Author: Ahmed Rizawan <arizawan@users.noreply.github.com>
    Date:   Fri Apr 21 14:15:59 2023 +0600

        Frontend (#7)

        * bug-fix update

        * bug-fix update

        ---------

        Co-authored-by: maruthiedien <maruthi@edien.com>

    commit 02da49a9cff6854c014e91c7540fd7df46497171
    Author: sumit-moo <99310699+sumit-moo@users.noreply.github.com>
    Date:   Mon Apr 17 11:54:30 2023 +0530

        User avtar update (#1)

    commit 9a13c9aab494bce63cef9ea967fe0762744ca294
    Author: gauravshah1993 <129276133+gauravshah1993@users.noreply.github.com>
    Date:   Mon Apr 17 11:53:55 2023 +0530

        Gaurav/hub 317 preve

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,6 +119,21 @@ services:
       - ./storage_app:/var/www:delegated
       - ./storage_app/php.ini:/usr/local/etc/php/conf.d/local.ini
 
+
+  cron:
+    build:
+      context: ./dockerfiles
+      dockerfile: php.cron.dockerfile
+      args:
+        - UID=${UID:-1000}
+        - GID=${GID:-1000}
+    restart: always
+    volumes:
+      - ./storage_app:/var/www:delegated
+      - ./storage_app/php.ini:/usr/local/etc/php/conf.d/local.ini
+    depends_on:
+      - app
+
   composer:
     build:
       context: ./dockerfiles
