--- a/storage_app/.env
+++ b/storage_app/.env
@@ -70,3 +70,6 @@ FRONTEND_URL="http://127.0.0.1"
 XRPL_BLOCK_DOMAIN="http://xrpl_api:8000"
 XRPL_APP_ENCRYPTION_KEY="Y37HXC2iiiq4HX0N08ufT271sQHPlI4p"
 SCOUT_DRIVER=database
+
+XRPL_BLOCK_DOMAIN="http://139.162.148.222:8005"
+XRPL_APP_ENCRYPTION_KEY="Y37HXC2iiiq4HX0N08ufT271sQHPlI4p"
