revert back .env update

--- a/storage_app/.env
+++ b/storage_app/.env
@@ -67,7 +67,6 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FRONTEND_URL="http://127.0.0.1"
-XRPL_BLOCK_DOMAIN="http://127.0.0.1:8005"
+XRPL_BLOCK_DOMAIN="http://xrpl_api:8000"
 XRPL_APP_ENCRYPTION_KEY="Y37HXC2iiiq4HX0N08ufT271sQHPlI4p"
 SCOUT_DRIVER=database
-
